TMP COMMIT
